Fix texts into html

--- a/about.html
+++ b/about.html
@@ -107,7 +107,8 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="index.html#services">Serviços</a></li>
-          <li><a href="index.html#pets">Pets Disponíveis</a></li>
+          <li><a href="index.html#pets">Pets</a></li>
+          <li><a href="index.html#pets">Faça uma doação</a></li>
           <li><a href="about.html">Sobre Nós</a></li>
           <li><a href="contact.html">Contato</a></li>
         </ul>
@@ -128,14 +129,26 @@
       <section>
         <h2 style="color: var(--primary-color); margin-bottom: 1rem;">Nossa História</h2>
         <p style="line-height: 1.8; color: var(--text-dark);">
-          A PetForma nasceu em 2025 com um propósito simples mas poderoso: conectar pessoas que amam animais. 
-          Percebemos que muitas pessoas desejam a companhia de um pet mas não podem ter um em casa por diversos motivos - 
-          falta de espaço, viagens frequentes, alergias na família ou restrições do condomínio.
+          A PetForma nasceu em 2025 com um propósito simples, mas poderoso: conectar pessoas e animais através do amor. 
+          Percebemos que muitas pessoas desejam a companhia de um pet,  mas não podem ter um em casa por diversos motivos - falta de espaço, 
+          viagens frequentes, alergias na família ou restrições do condomínio.<br>
+          Por outro lado, os abrigos estão cheios de animais abandonados precisando de carinho e atenção. 
+          Assim nasceu nossa ideia: se você não pode adotar um pet, por que não pode fazê-lo feliz por algumas horas ou dias?
         </p>
         <p style="line-height: 1.8; color: var(--text-dark); margin-top: 1rem;">
-          Por outro lado, muitos tutores precisam de ajuda para garantir que seus pets recebam a atenção e 
-          exercícios necessários durante suas longas jornadas de trabalho. Foi assim que criamos a primeira 
-          plataforma de pet sharing do Brasil, onde todos ganham - os pets, os tutores e os amantes de animais.
+          Ainda temos uma longa caminhada até o que consideramos cenário ideal para os animais, mas por aqui somos determinação, 
+          carinho e muitas lambidas.
+        </p>
+      </section>
+
+      <section>
+        <h2 style="color: var(--primary-color); margin-bottom: 1rem;">Como Operamos</h2>
+        <p style="line-height: 1.8; color: var(--text-dark);">
+          Estamos estruturados para gerar impacto social positivo. A cada agendamento efetivado em nossa plataforma, 
+          30% do valor é automaticamente destinado ao abrigo escolhido pelo usuário. 
+Além disso, as doações realizadas em nosso site são integralmente repassadas aos abrigos parceiros PetForma, sem qualquer desconto.
+Também estabelecemos parcerias com lojas e empresas, em que cada acordo é definido individualmente, mas sempre prevendo percentuais 
+de repasse que fortalecem o apoio contínuo aos abrigos parceiros.
         </p>
       </section>
 
@@ -219,15 +232,12 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>PetForma</h3>
-          <p>Conectando pessoas através do amor pelos pets</p>
-        </div>
-        <div class="footer-section">
           <h3>Links Rápidos</h3>
           <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="index.html#services">Serviços</a></li>
             <li><a href="index.html#pets">Pets</a></li>
+            <li><a href="index.html#pets">Faça uma doação</a></li>
             <li><a href="contact.html">Contato</a></li>
           </ul>
         </div>
@@ -235,8 +245,8 @@
           <h3>Contato</h3>
           <ul>
             <li>Email: contato@petforma.com</li>
-            <li>Telefone: (11) 99999-9999</li>
-            <li>WhatsApp: (11) 99999-9999</li>
+            <li>Telefone: (21) 99999-9999</li>
+            <li>WhatsApp: (21) 99999-9999</li>
           </ul>
         </div>
       </div>
