--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <ul>
           <li><a href="#home">Início</a></li>
           <li><a href="#services">Serviços</a></li>
-          <li><a href="#pets">Pets Disponíveis</a></li>
+          <li><a href="#pets">Pets</a></li>
+          <li><a href="#pets">Faça uma doação</a></li>
           <li><a href="about.html">Sobre Nós</a></li>
           <li><a href="contact.html">Contato</a></li>
         </ul>
@@ -31,9 +32,8 @@
     <div class="container">
       <div class="hero-content">
         <h1>PetForma</h1>
-        <p class="tagline">Conectando pessoas através do amor pelos pets</p>
-        <p>A primeira plataforma de pet sharing que permite que pessoas sem pets experimentem a companhia animal,
-          enquanto donos ocupados garantem que seus pets recebam atenção extra.</p>
+        <p class="tagline">Conectando pessoas e pets através do amor.</p>
+        <p>A primeira plataforma que permite que pessoas sem pets experimentem a companhia de um animalzinho.</p>
         <div class="cta-buttons">
           <button class="btn btn-primary" onclick="openBookingModal()">Agendar Agora</button>
           <a href="#services" class="btn btn-secondary">Conhecer Serviços</a>
@@ -187,15 +187,12 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>PetForma</h3>
-          <p>Conectando pessoas através do amor pelos pets</p>
-        </div>
-        <div class="footer-section">
           <h3>Links Rápidos</h3>
           <ul>
             <li><a href="#home">Início</a></li>
             <li><a href="#services">Serviços</a></li>
             <li><a href="#pets">Pets</a></li>
+            <li><a href="#pets">Faça uma doação</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
@@ -203,8 +200,8 @@
           <h3>Contato</h3>
           <ul>
             <li>Email: contato@petforma.com</li>
-            <li>Telefone: (11) 99999-9999</li>
-            <li>WhatsApp: (11) 99999-9999</li>
+            <li>Telefone: (21) 99999-9999</li>
+            <li>WhatsApp: (21) 99999-9999</li>
           </ul>
         </div>
       </div>
