--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,8 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="index.html#services">Serviços</a></li>
-          <li><a href="index.html#pets">Pets Disponíveis</a></li>
+          <li><a href="index.html#pets">Pets</a></li>
+          <li><a href="index.html#pets">Faça uma doação</a></li>
           <li><a href="about.html">Sobre Nós</a></li>
           <li><a href="contact.html">Contato</a></li>
         </ul>
@@ -219,7 +220,7 @@
           <div>
             <h3>Email</h3>
             <p>contato@petforma.com</p>
-            <p style="color: var(--text-light); font-size: 0.9rem;">Resposta em até 24 horas</p>
+            <p style="color: var(--text-light); font-size: 0.9rem;">Resposta em até 72 horas</p>
           </div>
         </div>
         
@@ -227,7 +228,7 @@
           <span class="info-icon">📞</span>
           <div>
             <h3>Telefone</h3>
-            <p>(11) 99999-9999</p>
+            <p>(21) 99999-9999</p>
             <p style="color: var(--text-light); font-size: 0.9rem;">Segunda a Sexta, 9h - 18h</p>
           </div>
         </div>
@@ -236,7 +237,7 @@
           <span class="info-icon">📱</span>
           <div>
             <h3>WhatsApp</h3>
-            <p>(11) 99999-9999</p>
+            <p>(21) 99999-9999</p>
             <p style="color: var(--text-light); font-size: 0.9rem;">Atendimento rápido</p>
           </div>
         </div>
@@ -245,9 +246,9 @@
           <span class="info-icon">📦</span>
           <div>
             <h3>Endereço</h3>
-            <p>Av. Paulista, 1000</p>
-            <p>São Paulo - SP</p>
-            <p>CEP: 01310-100</p>
+            <p>Rua Pascoal Lemme, 355 - Cidade Universitária</p>
+            <p>Rio de Janeiro - RJ</p>
+            <p>CEP: 21941-616</p>
           </div>
         </div>
         
@@ -256,8 +257,6 @@
           <div class="social-links">
             <a href="#" class="social-link" title="Facebook">🐶</a>
             <a href="#" class="social-link" title="Instagram">📷</a>
-            <a href="#" class="social-link" title="Twitter">🐦</a>
-            <a href="#" class="social-link" title="YouTube">🎥</a>
           </div>
         </div>
       </div>
@@ -331,7 +330,7 @@
     <div class="map-container">
       <div style="text-align: center;">
         <h3 style="color: var(--primary-color); margin-bottom: 1rem;">Nossa Localização</h3>
-        <p style="color: var(--text-light);">Av. Paulista, 1000 - São Paulo, SP</p>
+        <p style="color: var(--text-light);">Rua Pascoal Lemme, 355 - Cidade Universitária - Rio de Janeiro, RJ</p>
         <p style="margin-top: 2rem; padding: 2rem; background: white; border-radius: 8px;">
           🗺️ Mapa interativo em breve!
         </p>
@@ -344,15 +343,12 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>PetForma</h3>
-          <p>Conectando pessoas através do amor pelos pets</p>
-        </div>
-        <div class="footer-section">
           <h3>Links Rápidos</h3>
           <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="index.html#services">Serviços</a></li>
             <li><a href="index.html#pets">Pets</a></li>
+            <li><a href="index.html#pets">Faça uma doação</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
@@ -360,8 +356,8 @@
           <h3>Contato</h3>
           <ul>
             <li>Email: contato@petforma.com</li>
-            <li>Telefone: (11) 99999-9999</li>
-            <li>WhatsApp: (11) 99999-9999</li>
+            <li>Telefone: (21) 99999-9999</li>
+            <li>WhatsApp: (21) 99999-9999</li>
           </ul>
         </div>
       </div>
