--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@ de repasse que fortalecem o apoio contínuo aos abrigos parceiros.
         <div class="card">
           <h2>👁️ Nossa Visão</h2>
           <p>Ser a principal plataforma de conexão entre pets e pessoas no Brasil, transformando 
-             a forma como a sociedade se relaciona com os animais de estimação.</p>
+             o modo como a sociedade se relaciona com os animais.</p>
         </div>
       </div>
 
@@ -187,30 +187,45 @@ de repasse que fortalecem o apoio contínuo aos abrigos parceiros.
       </section>
 
       <section class="team-section">
-        <h2 style="color: var(--primary-color); text-align: center; margin-bottom: 1rem;">Nossa Equipe</h2>
+        <h2 style="color: var(--primary-color); text-align: center; margin-bottom: 1rem;">Nosso Time</h2>
         <p style="text-align: center; color: var(--text-light); margin-bottom: 2rem;">
           Somos apaixonados por animais e tecnologia
         </p>
         <div class="team-grid">
           <div class="team-member">
-            <img src="./assets/petforma-logo.png" alt="Ana Silva">
-            <h3>Ana Silva</h3>
-            <p style="color: var(--text-light);">CEO & Fundadora</p>
+            <img src="./assets/pedro-face.png" alt="Imagem da face do Pedro de Freitas">
+            <h3>Pedro de Freitas</h3>
+            <p style="color: var(--text-light);">CEO & Fundador</p>
           </div>
           <div class="team-member">
-            <img src="./assets/petforma-logo.png" alt="Carlos Santos">
-            <h3>Carlos Santos</h3>
-            <p style="color: var(--text-light);">Veterinário Chefe</p>
+            <img src="./assets/michelle-face.png" alt="Imagem da face de Michelle Alves">
+            <h3>Michelle Alves</h3>
+            <p style="color: var(--text-light);">Diretora de Impacto Social e Fundadora</p>
           </div>
           <div class="team-member">
-            <img src="./assets/petforma-logo.png" alt="Maria Oliveira">
-            <h3>Maria Oliveira</h3>
+            <img src="./assets/dani-face.png" alt="Imagem da face de Daniela Marques">
+            <h3>Daniela Marques</h3>
+            <p style="color: var(--text-light);">CFO</p>
+          </div>
+          <div class="team-member">
+            <img src="./assets/rodrigo-face.png" alt="Imagem da face de Rodrigo Palo">
+            <h3>Rodrigo Palo</h3>
+            <p style="color: var(--text-light);">CMO</p>
+          </div>
+          <div class="team-member">
+            <img src="./assets/lucas-face.png" alt="Imagem da face de Lucas Frota">
+            <h3>Lucas Frota</h3>
+            <p style="color: var(--text-light);">Diretor de Parcerias</p>
+          </div>
+          <div class="team-member">
+            <img src="./assets/juliana-face.png" alt="Imagem da face de Juliana Mynssen">
+            <h3>Juliana Mynssen</h3>
+            <p style="color: var(--text-light);">Diretora de Relacionamento com Abrigos</p>
+          </div>
+          <div class="team-member">
+            <img src="./assets/leticia-face.jpeg" alt="Imagem da face de Letícia Prata">
+            <h3>Letícia Prata</h3>
             <p style="color: var(--text-light);">Diretora de Operações</p>
-          </div>
-          <div class="team-member">
-            <img src="./assets/petforma-logo.png" alt="João Pedro">
-            <h3>João Pedro</h3>
-            <p style="color: var(--text-light);">Coordenador de Cuidadores</p>
           </div>
         </div>
       </section>
