--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
   <!-- Pet Gallery -->
   <section id="pets" class="pet-gallery">
     <div class="container">
-      <h2>Pets Disponíveis</h2>
+      <h2>Dê um match com seu Pet</h2>
       <div class="pets-grid">
         <div class="pet-card">
           <img src="./assets/persa.png" alt="Cachorro Persa">
           <div class="pet-info">
             <h3>Persa</h3>
-            <p>Cachorro dócil e companheiro. Adora brincar e receber carinho.</p>
+            <p>Macho - 4 meses<br> Dócil e companheiro. Adora brincar e receber carinho.<br>Santa Rosa / Niterói</p>
             <button class="btn btn-primary" onclick="openBookingModal('', 'Persa')">Agendar</button>
           </div>
         </div>
@@ -86,24 +86,56 @@
           <img src="./assets/toddy.png" alt="Cachorro Toddy">
           <div class="pet-info">
             <h3>Toddy</h3>
-            <p>Cachorro brincalhão e energético. Adora passeios e brincar com bolinhas.</p>
+            <p>Macho - 6 meses<br> Muito brincalhão. Adora passeios e brincar com bolinhas.<br> Zona Norte / Rio de Janeiro</p>
             <button class="btn btn-primary" onclick="openBookingModal('', 'Toddy')">Agendar</button>
           </div>
         </div>
         <div class="pet-card">
-          <img src="./assets/brigite.png" alt="Mais pets">
+          <img src="./assets/Nina.png" alt="Mais pets">
           <div class="pet-info">
-            <h3>Brigite</h3>
-            <p>Labradora amigável. Perfeita para famílias e crianças.</p>
-            <button class="btn btn-primary" onclick="openBookingModal('', 'Brigite')">Agendar</button>
+            <h3>Nina</h3>
+            <p>Fêmea - 8 meses<br> Amigável e perfeita para famílias e crianças.<br> Zona Oeste / Rio de Janeiro</p>
+            <button class="btn btn-primary" onclick="openBookingModal('', 'Nina')">Agendar</button>
           </div>
         </div>
         <div class="pet-card">
           <img src="./assets/luna.png" alt="Mais pets">
           <div class="pet-info">
             <h3>Luna</h3>
-            <p>Cadela fofa e independente. Gosta de atenção nos seus termos.</p>
+            <p>Fêmea - 1 ano<br> Fofa e independente. Gosta de atenção.<br> Zona Sul / Rio de Janeiro</p>
             <button class="btn btn-primary" onclick="openBookingModal('', 'Luna')">Agendar</button>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./assets/thor.png" alt="Mais pets">
+          <div class="pet-info">
+            <h3>Thor</h3>
+            <p>Macho - 1 ano<br> Muito amigável, adora crianças. Ativo e adora brincadeiras.<br> Cabuçu / Nova Iguaçu</p>
+            <button class="btn btn-primary" onclick="openBookingModal('', 'Thor')">Agendar</button>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./assets/mel.png" alt="Mais pets">
+          <div class="pet-info">
+            <h3>Mel</h3>
+            <p>Fêmea - 3 anos<br> Dócil, amorosa e tranquila. Prefere ambientes calmos.<br> Região Oceânica / Niteroi</p>
+            <button class="btn btn-primary" onclick="openBookingModal('', 'Mel')">Agendar</button>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./assets/max.png" alt="Mais pets">
+          <div class="pet-info">
+            <h3>Max</h3>
+            <p>Macho - 2 anos<br> Amoroso e carente. Adora ficar abraçado.<br> Centro / Nova Iguaçu</p>
+            <button class="btn btn-primary" onclick="openBookingModal('', 'Max')">Agendar</button>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./assets/dalla.png" alt="Mais pets">
+          <div class="pet-info">
+            <h3>Dalla</h3>
+            <p>Fêmea - 4 anos<br> Dócil e adora brincadeiras. Muito carinhosa. <br>Zona Sul / Rio de Janeiro</p>
+            <button class="btn btn-primary" onclick="openBookingModal('', 'Dalla')">Agendar</button>
           </div>
         </div>
       </div>
@@ -131,8 +163,12 @@
             <option value="">Selecione um pet</option>
             <option value="persa">Persa (Cachorro)</option>
             <option value="toddy">Toddy (Cachorro)</option>
-            <option value="brigite">Brigite (Cachorro)</option>
+            <option value="nina">Nina (Cachorro)</option>
             <option value="luna">Luna (Cachorro)</option>
+            <option value="thor">Thor (Cachorro)</option>
+            <option value="mel">Mel (Cachorro)</option>
+            <option value="max">Max (Cachorro)</option>
+            <option value="dalla">Dalla (Cachorro)</option>
           </select>
         </div>
         <div class="form-group">
