Fix nina's photo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="pet-card">
-          <img src="./assets/Nina.png" alt="Mais pets">
+          <img src="./assets/nina.png" alt="Mais pets">
           <div class="pet-info">
             <h3>Nina</h3>
             <p>Fêmea - 8 meses<br> Amigável e perfeita para famílias e crianças.<br> Zona Oeste / Rio de Janeiro</p>
