--- a/about.html
+++ b/about.html
@@ -230,14 +230,11 @@ de repasse que fortalecem o apoio contínuo aos abrigos parceiros.
         </div>
       </section>
 
-      <section style="margin-top: 3rem; text-align: center; padding: 2rem; background: var(--bg-light); border-radius: 12px;">
-        <h2 style="color: var(--primary-color); margin-bottom: 1rem;">Junte-se a Nós!</h2>
+      <section style="margin-top: 3rem; text-align: center; padding: 2rem; background: transparent; border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <img src="./assets/petforma-logo.png" alt="Logo PetForma" class="logo" style="margin-bottom: 1.5rem;">
         <p style="margin-bottom: 1.5rem;">
-          Faça parte da comunidade PetForma e descubra a alegria de compartilhar momentos especiais com pets incríveis.
+          Conheça a PetForma e descubra a alegria de compartilhar momentos especiais com pets incríveis.
         </p>
-        <button class="btn btn-primary" onclick="window.location.href='index.html#services'">
-          Começar Agora
-        </button>
       </section>
     </div>
   </div>
