add donation page

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
           <li><a href="index.html">Início</a></li>
           <li><a href="index.html#services">Serviços</a></li>
           <li><a href="index.html#pets">Pets</a></li>
-          <li><a href="index.html#pets">Faça uma doação</a></li>
+          <li><a href="donation.html">Faça uma doação</a></li>
           <li><a href="about.html">Sobre Nós</a></li>
           <li><a href="contact.html">Contato</a></li>
         </ul>
@@ -249,7 +249,7 @@ de repasse que fortalecem o apoio contínuo aos abrigos parceiros.
             <li><a href="index.html">Início</a></li>
             <li><a href="index.html#services">Serviços</a></li>
             <li><a href="index.html#pets">Pets</a></li>
-            <li><a href="index.html#pets">Faça uma doação</a></li>
+            <li><a href="donation.html">Faça uma doação</a></li>
             <li><a href="contact.html">Contato</a></li>
           </ul>
         </div>
