--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
           <li><a href="index.html">Início</a></li>
           <li><a href="index.html#services">Serviços</a></li>
           <li><a href="index.html#pets">Pets</a></li>
-          <li><a href="index.html#pets">Faça uma doação</a></li>
+          <li><a href="donation.html">Faça uma doação</a></li>
           <li><a href="about.html">Sobre Nós</a></li>
           <li><a href="contact.html">Contato</a></li>
         </ul>
@@ -348,7 +348,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="index.html#services">Serviços</a></li>
             <li><a href="index.html#pets">Pets</a></li>
-            <li><a href="index.html#pets">Faça uma doação</a></li>
+            <li><a href="donation.html">Faça uma doação</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
