--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#home">Início</a></li>
           <li><a href="#services">Serviços</a></li>
           <li><a href="#pets">Pets</a></li>
-          <li><a href="#pets">Faça uma doação</a></li>
+          <li><a href="donation.html">Faça uma doação</a></li>
           <li><a href="about.html">Sobre Nós</a></li>
           <li><a href="contact.html">Contato</a></li>
         </ul>
@@ -178,8 +178,6 @@
             height: auto;
             }
           }
-          }
-        }
       </style>
     </div>
   </section>
@@ -343,7 +341,7 @@
             <li><a href="#home">Início</a></li>
             <li><a href="#services">Serviços</a></li>
             <li><a href="#pets">Pets</a></li>
-            <li><a href="#pets">Faça uma doação</a></li>
+            <li><a href="donation.html">Faça uma doação</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
