--- a/contact.html
+++ b/contact.html
@@ -272,7 +272,7 @@
           <span>▼</span>
         </div>
         <div class="faq-answer">
-          <p>É muito simples! Basta escolher o serviço desejado (passear, cuidar ou brincar), 
+          <p>É muito simples! Basta escolher o serviço desejado, 
              selecionar o pet disponível, escolher a data e horário, e preencher seus dados. 
              Você receberá uma confirmação por email.</p>
         </div>
@@ -313,17 +313,6 @@
         </div>
       </div>
       
-      <div class="faq-item">
-        <div class="faq-question" onclick="toggleFaq(this)">
-          <span>Como posso me tornar um cuidador?</span>
-          <span>▼</span>
-        </div>
-        <div class="faq-answer">
-          <p>Se você ama animais e quer fazer parte da nossa equipe, envie seu currículo 
-             através do formulário de contato selecionando "Quero ser Parceiro". 
-             Nossa equipe entrará em contato para os próximos passos.</p>
-        </div>
-      </div>
     </div>
 
     <!-- Map -->
