--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
           <label for="service">Serviço:</label>
           <select id="service" name="service" required>
             <option value="">Selecione um serviço</option>
-            <option value="passear">Passear</option>
-            <option value="cuidar">Cuidar</option>
-            <option value="brincar">Brincar</option>
+            <option value="passear">Seja Tio Por Um Dia</option>
+            <option value="cuidar">Apadrinhe Um Pet</option>
+            <option value="brincar">Leve Um Pet Para Passear</option>
           </select>
         </div>
         <div class="form-group">
