--- a/order-completed.html
+++ b/order-completed.html
@@ -353,7 +353,7 @@
       </div>
 
       <div class="dog-image-container">
-        <img src="./assets/toddy.png" alt="Cachorro feliz" class="dog-image">
+        <img src="./assets/grateful-dog.png" alt="Cachorro feliz" class="dog-image">
         <p class="thank-you-text">Obrigado!</p>
       </div>
 
