--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <img src="./assets/kit-pet.png" alt="Kit Pet" class="kit-image">
             <div class="kit-options">
               <div class="kit-option">
-                <input type="radio" id="kit-sobrevivencia" name="kit" value="sobrevivencia">
+                <input type="radio" id="kit-sobrevivencia" name="kit" value="sobrevivencia" checked>
                 <label for="kit-sobrevivencia">
                   <strong>Kit de Sobrevivência - R$ 40,00</strong><br>
                   <span class="kit-description">Ração para o período, Coleira para passeios e 1 biscoito</span>
@@ -390,12 +390,6 @@
                 <label for="kit-vovo">
                   <strong>Kit Criado com a Vovó - R$ 60,00</strong><br>
                   <span class="kit-description">Ração para o período, Coleira para passeios, brinquedo de corda, biscoitos de livre escolha</span>
-                </label>
-              </div>
-              <div class="kit-option">
-                <input type="radio" id="kit-nenhum" name="kit" value="nenhum" checked>
-                <label for="kit-nenhum">
-                  <strong>Não quero kit</strong>
                 </label>
               </div>
             </div>
